Replace the usage of byte[] by the new type ImmutableByteArray.